# black_trivia_project

./: .dockerignore  .env.example  .gitignore  .vercelignore  Dockerfile  README.md  build.py  package-lock.json  package.json  pyproject.toml  requirements.txt  vercel.json
.github/workflows/: build-push.yml
api/: index.py
backend/backend/: asgi.py  runtime_bootstrap.py  settings.py  urls.py  views.py
backend/game/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/game/data/: load_questions.py  questions_data.py
backend/game/migrations/: 0001_initial.py  0002_alter_question_category_alter_question_question_text.py  0003_match_current_buzzer_alter_match_loser_and_more.py  0004_match_current_question.py  0005_question_difficulty_alter_question_category.py  0006_match_invite_code_scores_and_open_slot.py  0007_user_google_sub.py  0008_blackcard_match_card_rules.py  0009_match_question_started_at.py  0010_add_match_categories.py  0011_add_push_subscription.py
backend/game/views/: __init__.py  api.py  web.py
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: index.css  index.js
frontend/src/components/: Game.js  GameDashboard.js
frontend/src/pages/: Dashboard.js  Login.js  Register.js
mobile/: App.js  app.json  package-lock.json  package.json
mobile/src/components/: StateBlock.js  StatusBanner.js
mobile/src/constants/: api.js  theme.js
mobile/src/context/: AuthContext.js
mobile/src/navigation/: AppNavigator.js
mobile/src/screens/: BootScreen.js  GameScreen.js  HomeScreen.js  (+6 more)
(+4 files in other folders)
